# ERP

./: .gitignore  ARCHITECTURE.md  DECISIONS.md  README.md  package.json  pyproject.toml  src - Raccourci.lnk  tsconfig.base.json
Back_End/: FichiersGood-main - Raccourci.lnk
Back_End/FichiersGood-main/: Back-end - Raccourci (2).lnk  Back-end - Raccourci.lnk
Back_End/FichiersGood-main/Back-end/: back-end - Raccourci (2).lnk  back-end - Raccourci.lnk  package-lock.json  package.json
Front/: package-lock.json  package.json  src - Raccourci.lnk
Front/public/: index.html
Front/src/: App.js  index.js
Front/src/components/: CreationEvennement.js  EventPage.js  Homepage.js  Login.js  PageAnimations.js  PageMateriels.js  PagePrestataires.js  PageSponsors.js  PageVignerons.js
Front/src/helpers/: CheckboxGroup.js  RangeSelector.js  format-dates.js  format-type.js
front/: .eslintrc.cjs  index.html  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
front/src/: App.tsx  main.tsx
front/src/app/: AppLayout.tsx
front/src/routes/: DashboardHome.tsx  QuestionnaireWizard.tsx
server/: .env.example  .eslintrc.cjs  package.json  tsconfig.json
server/prisma/: schema.prisma
server/src/: app.ts  index.ts
server/src/config/: env.ts
shared/: .eslintrc.cjs  package.json  tsconfig.json
shared/src/: index.ts
src/erp/: __init__.py  accounting.py  inventory.py  models.py  orders.py
tests/: package.json  test_accounting.py  test_inventory.py  test_orders.py  tsconfig.json  vitest.config.ts
tests/src/: sample.test.ts
(+34 files in other folders)
